<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view_stub_with_anim">ViewStubWithAnimActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="admin_label">Admin for blabla launcher</string>
    <string name="admin_description">Active admin for blabla launcher, power your phone lock</string>
    <string name="guide_view_got_it">I got it</string>
    <string name="guide_view_assist_description">Get your permission to save battery \n improve your phone performance</string>
    <string name="guide_view_notify_description">Hide notification bar, keep your privacy safe</string>
    <string name="guide_view_bla_bla">BlaBla Launcher</string>
    <string name="guide_view_guide_text">Get your permission to save battery\nimprove your phone performance</string>
    <string name="guide_view_replay_tip">Tips</string>
    <string name="title_activity_set_image_from_wallpaper">SetImageFromWallpaperActivity</string>
    <string name="retrieve_password_title">Forget password</string>
    <string name="retrieve_password_set_password">Please set password</string>
    <string name="retrieve_password_reenter_password">Re-enter password</string>
    <string name="retrieve_password_reset_password">Reset password</string>
    <string name="retrieve_password_do_not_match">Passwords do not match</string>
    <string name="retrieve_password_login_hint">Please login,reset your password</string>
    <string name="retrieve_password_login_button_text">Sign in with google</string>
    <string name="retrieve_password_mismatch_hint">does not match the account you sign in on your phone, please try again with</string>
    <string name="retrieve_password_cancel">Cancel</string>
    <string name="retrieve_password_continue">Continue</string>
    <string name="retrieve_password_no_available_google_account">No available google account</string>
    <string name="lock_home_first_launch_guide_up_swipe_title">Up slide</string>
    <string name="lock_home_first_launch_guide_up_swipe_description">Different password, different space</string>
    <string name="lock_home_first_launch_guide_left_swipe_title">Left slide</string>
    <string name="lock_home_first_launch_guide_left_swipe_description">Come into guest mode</string>
    <string name="old_launcher_provider_uri" translatable="false">content://com.android.launcher2.settings/favorites?notify=true</string>
    <string name="receive_launch_broadcasts_permission" translatable="false">com.android.launcher3.permission.RECEIVE_LAUNCH_BROADCASTS</string>
    <string name="receive_first_load_broadcast_permission" translatable="false">com.android.launcher3.permission.RECEIVE_FIRST_LOAD_BROADCAST</string>
    <string name="application_name">BlaBla Privacy</string>
    <string name="folder_name"></string>
    <string name="work_folder_name">Work</string>
    <string name="activity_not_found">App isn\'t installed.</string>
    <string name="activity_not_available">App isn\'t available</string>
    <string name="safemode_shortcut_error">Downloaded app disabled in Safe mode</string>
    <string name="safemode_widget_error">Widgets disabled in Safe mode</string>
    <string name="toggle_weight_watcher">Show Mem</string>
    <string name="long_press_widget_to_add">Touch &amp; hold to pick up a widget.</string>
    <string name="widget_dims_format">%1$d \u00d7 %2$d</string>
    <string name="all_apps_add">Add</string>
    <string name="all_apps_search_bar_hint">Search Apps</string>
    <string name="all_apps_loading_message">Loading Apps&#8230;</string>
    <string name="out_of_space">No more room on this Home screen.</string>
    <string name="hotseat_out_of_space">No more room in the Favorites tray</string>
    <string name="all_apps_button_label">Apps</string>
    <string name="all_apps_home_button_label">Home</string>
    <string name="delete_target_label">Remove</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="permlab_install_shortcut">install shortcuts</string>
    <string name="permdesc_install_shortcut">Allows an app to add
        shortcuts without user intervention.</string>
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows the app to read the settings and
        shortcuts in Home.</string>
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows the app to change the settings and
        shortcuts in Home.</string>
    <string name="gadget_error_text">Problem loading widget</string>
    <string name="gadget_setup_text">Setup</string>
    <string name="uninstall_system_app_text">This is a system app and can\'t be uninstalled.</string>
    <string name="folder_hint_text">Unnamed Folder</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="workspace_scroll_format">Home screen %1$d of %2$d</string>
    <string name="first_run_cling_title">Welcome</string>
    <string name="migration_cling_title">Copy your app icons</string>
    <string name="migration_cling_description">Import icons and folders from your old Home screens?</string>
    <string name="migration_cling_copy_apps">COPY ICONS</string>
    <string name="migration_cling_use_default">START FRESH</string>
    <string name="workspace_cling_longpress_title">Wallpapers, widgets, &amp; settings</string>
    <string name="workspace_cling_longpress_description">Touch &amp; hold background to customize</string>
    <string name="workspace_cling_longpress_dismiss">GOT IT</string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to save rename</string>
    <string name="folder_closed">Folder closed</string>
    <string name="debug_memory_activity" translatable="false">* HPROF</string>
    <string name="widget_button_text">Widgets</string>
    <string name="wallpaper_button_text">Wallpapers</string>
    <string name="settings_button_text">Settings</string>
    <string name="allow_rotation_title">Allow rotation</string>
    <string name="package_state_unknown">Unknown</string>
    <string name="abandoned_clean_this">Remove</string>
    <string name="abandoned_search">Search</string>
    <string name="abandoned_promises_title">This app is not installed</string>
    <string name="abandoned_promise_explanation">The app for this icon isn\'t installed.
        You can remove it, or search for the app and install it manually.
    </string>
    <string name="action_add_to_workspace">Add to Home screen</string>
    <string name="action_move_here">Move item here</string>
    <string name="item_added_to_workspace">Item added to home screen</string>
    <string name="item_removed">Item removed</string>
    <string name="action_move">Move item</string>
    <string name="item_moved">Item moved</string>
    <string name="folder_created">Folder created</string>
    <string name="action_move_to_workspace">Move to Home screen</string>
    <string name="action_move_screen_left">Move screen to left</string>
    <string name="action_move_screen_right">Move screen to right</string>
    <string name="screen_moved">Screen moved</string>
    <string name="action_resize">Resize</string>
    <string name="action_increase_width">Increase width</string>
    <string name="action_increase_height">Increase height</string>
    <string name="action_decrease_width">Decrease width</string>
    <string name="action_decrease_height">Decrease height</string>
    <string name="button1_large_text" translatable="false">1</string>
    <string name="button2_large_text" translatable="false">2</string>
    <string name="button2_small_text" translatable="false">ABC</string>
    <string name="button3_large_text" translatable="false">3</string>
    <string name="button3_small_text" translatable="false">DEF</string>
    <string name="button4_large_text" translatable="false">4</string>
    <string name="button4_small_text" translatable="false">GHI</string>
    <string name="button5_large_text" translatable="false">5</string>
    <string name="button5_small_text" translatable="false">JKL</string>
    <string name="button6_large_text" translatable="false">6</string>
    <string name="button6_small_text" translatable="false">MNO</string>
    <string name="button7_large_text" translatable="false">7</string>
    <string name="button7_small_text" translatable="false">PQRS</string>
    <string name="button8_large_text" translatable="false">8</string>
    <string name="button8_small_text" translatable="false">TUV</string>
    <string name="button9_large_text" translatable="false">9</string>
    <string name="button9_small_text" translatable="false">WXYZ</string>
    <string name="button11_large_text" translatable="false">0</string>
    <string name="fl_first_title">New variety of desktop</string>
    <string name="fl_first_subtitle">One desktop,multiple accounts\nEnjoy you own account at BlaBla Privacy</string>
    <string name="fl_second_title">Set a family account</string>
    <string name="fl_second_subtitle">Maintain the balance between family and \n privacy, free you from worries</string>
    <string name="fl_third_title">Set a friendship account</string>
    <string name="fl_third_subtitle">Friendship is dear, but \nprivacy protection is dearer</string>
    <string name="fl_forth_title">Set a PIN Code to start your private account</string>
    <string name="fl_create_account_btn_on_last_page">LET\'S GO</string>
    <string name="user_system_settings">User System Settings</string>
    <string name="pin_code_password_default_hint">Please enter PIN Code</string>
    <string name="pin_code_password_incorrect">Incorrect, please try again</string>
    <string name="pin_code_retry_after_prefix">Please try again after %d </string>
    <string name="pin_code_retry_after_suffix">\u0020seconds.</string>
    <string name="pin_code_retry_after_suffix_for_one_second">\u0020second.\u0020</string>
    <string name="pw_hint">Please enter 4 numbers</string>
    <string name="pw_error">only support digital PIN Code</string>
    <string name="ps_exist">PIN Code exists,please reset</string>
    <string name="pw_edit_error">The PIN Code must be a four digit number</string>
    <string name="hint">Please enter a user name</string>
    <string name="name_error">Letters and numbers, @#$^ not allowed except</string>
    <string name="name_type_error">Support in English, Chinese and underline</string>
    <string name="name_max_error">Use name 16 characters maximum</string>
    <string name="create_an_account">Create account</string>
    <string name="more_actions">More Settings</string>
    <string name="hide_applications">Hide Applications</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="user_type">User type:</string>
    <string name="password">PIN Code:</string>
    <string name="save">Save</string>
    <string name="hide">Hide</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="whether_sure_to_delete_the_account">Confirmed to delete?</string>
    <string name="you_can_find">You can re-display the hidden app in settings</string>
    <string name="turn_left_slide">slide left to open</string>
    <string name="lock_screen_then_slide_left">Lock screen then slide left</string>
    <string name="privacy_process_protecting">protecting</string>
    <string name="privacy_process_result_content">All around protection</string>
    <string name="privacy_process_result_try_now">@string/try_now</string>
</resources>