<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/parent"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical"
              android:weightSum="100"
              tools:background="@color/colorPrimary"
    >

    <LinearLayout style="@style/PinCodeButtonCol"
        >

        <View style="@style/PinCodeButtonLeftRight"/>

        <FrameLayout
            android:id="@+id/single_button_parent"
            style="@style/PinCodeButtonParent"
            >

            <com.ce.game.myapplication.view.newpincode.NumberKeyboardSingleButtonForUnlock
                android:id="@+id/number_keyboard_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="@string/button1_large_text"
                />
        </FrameLayout>

        <View style="@style/PinCodeButtonGap"/>

        <FrameLayout
            style="@style/PinCodeButtonParent"
            >

            <com.ce.game.myapplication.view.newpincode.NumberKeyboardSingleButtonForUnlock
                android:id="@+id/number_keyboard_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="@string/button2_large_text"
                />
        </FrameLayout>


        <View style="@style/PinCodeButtonGap"/>

        <FrameLayout
            style="@style/PinCodeButtonParent"
            >

            <com.ce.game.myapplication.view.newpincode.NumberKeyboardSingleButtonForUnlock
                android:id="@+id/number_keyboard_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="@string/button3_large_text"
                />
        </FrameLayout>

        <View style="@style/PinCodeButtonLeftRight"/>
    </LinearLayout>

    <LinearLayout style="@style/PinCodeButtonCol">

        <View style="@style/PinCodeButtonLeftRight"/>

        <FrameLayout
            style="@style/PinCodeButtonParent"
            >

            <com.ce.game.myapplication.view.newpincode.NumberKeyboardSingleButtonForUnlock
                android:id="@+id/number_keyboard_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="@string/button4_large_text"
                />
        </FrameLayout>

        <View style="@style/PinCodeButtonGap"/>

        <FrameLayout
            style="@style/PinCodeButtonParent"
            >

            <com.ce.game.myapplication.view.newpincode.NumberKeyboardSingleButtonForUnlock
                android:id="@+id/number_keyboard_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="@string/button5_large_text"
                />
        </FrameLayout>


        <View style="@style/PinCodeButtonGap"/>

        <FrameLayout
            style="@style/PinCodeButtonParent"
            >

            <com.ce.game.myapplication.view.newpincode.NumberKeyboardSingleButtonForUnlock
                android:id="@+id/number_keyboard_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="@string/button6_large_text"
                />
        </FrameLayout>

        <View style="@style/PinCodeButtonLeftRight"/>

    </LinearLayout>

    <LinearLayout style="@style/PinCodeButtonCol">

        <View style="@style/PinCodeButtonLeftRight"/>

        <FrameLayout
            style="@style/PinCodeButtonParent"
            >

            <com.ce.game.myapplication.view.newpincode.NumberKeyboardSingleButtonForUnlock
                android:id="@+id/number_keyboard_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="@string/button7_large_text"
                />
        </FrameLayout>

        <View style="@style/PinCodeButtonGap"/>

        <FrameLayout
            style="@style/PinCodeButtonParent"
            >

            <com.ce.game.myapplication.view.newpincode.NumberKeyboardSingleButtonForUnlock
                android:id="@+id/number_keyboard_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="@string/button8_large_text"
                />
        </FrameLayout>

        <View style="@style/PinCodeButtonGap"/>

        <FrameLayout
            style="@style/PinCodeButtonParent"
            >

            <com.ce.game.myapplication.view.newpincode.NumberKeyboardSingleButtonForUnlock
                android:id="@+id/number_keyboard_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="@string/button9_large_text"
                />
        </FrameLayout>


        <View style="@style/PinCodeButtonLeftRight"/>
    </LinearLayout>

    <LinearLayout style="@style/PinCodeButtonCol">

        <View style="@style/PinCodeButtonLeftRight"/>

        <FrameLayout
            style="@style/PinCodeButtonParent"
            >

            <com.ce.game.myapplication.view.newpincode.ImageKeyboardButtonForUnlock
                android:id="@+id/number_keyboard_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="10"
                />
        </FrameLayout>

        <View style="@style/PinCodeButtonGap"/>

        <FrameLayout
            style="@style/PinCodeButtonParent"
            >

            <com.ce.game.myapplication.view.newpincode.NumberKeyboardSingleButtonForUnlock
                android:id="@+id/number_keyboard_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="@string/button11_large_text"
                />
        </FrameLayout>

        <View style="@style/PinCodeButtonGap"/>

        <FrameLayout
            style="@style/PinCodeButtonParent"

            >

            <com.ce.game.myapplication.view.newpincode.ImageKeyboardButtonForUnlock
                android:id="@+id/number_keyboard_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:number_keyboard_text="11"
                />
        </FrameLayout>

        <View style="@style/PinCodeButtonLeftRight"/>
    </LinearLayout>

</LinearLayout>
