<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/retrieve_view_login_hint_text"
             android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/retrieve_password_login_bg"
        android:orientation="vertical">


        <TextView
            android:id="@+id/rpd_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/retrieve_password_title"
            android:textColor="@color/retrieve_view_mismatch_dialog_title"/>/>

        <TextView
            android:id="@+id/rpd_hint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/retrieve_password_mismatch_hint"
            android:textColor="@color/retrieve_view_mismatch_dialog_hint_text"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="8dp"
            android:background="@color/retrieve_view_login_hint_text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <TextView
                android:id="@+id/rpd_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"

                android:gravity="center"
                android:padding="5dp"
                android:text="@string/retrieve_password_cancel"
                android:textColor="@color/retrieve_view_mismatch_dialog_hint_text"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/retrieve_view_login_hint_text"
                />

            <TextView
                android:id="@+id/rpd_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/retrieve_password_continue"
                android:textColor="@color/retrieve_view_mismatch_dialog_continue"
                />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
