<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/retrieve_view_bg"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/retrieve_password_title"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/general_return"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/general_return"
        android:gravity="left|start|center_vertical"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:text="@string/retrieve_password_title"
        android:textColor="@color/setting_text_color"
        android:textSize="20sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/retrieve_view_border"
        />

    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/retrieve_password_login_square_left_right_margin"
            android:layout_marginLeft="@dimen/retrieve_password_login_square_left_right_margin"
            android:layout_marginRight="@dimen/retrieve_password_login_square_left_right_margin"
            android:layout_marginStart="@dimen/retrieve_password_login_square_left_right_margin"
            android:layout_marginTop="@dimen/retrieve_password_login_square_top_margin"
            android:background="@drawable/retrieve_password_login_bg"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/app_com_blabla_launcher"
                android:gravity="center_horizontal"
                android:text="@string/application_name"
                android:textColor="@color/setting_text_color"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="8dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/retrieve_password_login_hint"
                    android:textColor="@color/retrieve_view_login_hint_text"
                    />

                <LinearLayout
                    android:id="@+id/to_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:background="@drawable/retrieve_password_login_google_button_bg"
                    >

                    <ImageView
                        android:padding="5dp"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/lockscreen_icon_google"
                        />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="#bf3f2b"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/retrieve_password_login_button_text"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:textSize="13sp"
                        android:layout_marginLeft="23dp"
                        android:layout_marginStart="23dp"
                        android:layout_marginRight="23dp"
                        android:layout_marginEnd="23dp"
                        android:layout_gravity="center_vertical"
                        />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <ViewStub
            android:id="@+id/mismatch_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout="@layout/retrieve_password_email_mismatch"
            />

        <WebView
            android:id="@+id/login_web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/holo_blue_bright"
            android:visibility="gone"
            />

        <ViewStub
            android:id="@+id/no_account_available_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout="@layout/retrieve_password_no_account_available"
            />

    </FrameLayout>

</LinearLayout>
